export const snapshot = {};

snapshot[`Issue Update Command - Help Text 1`] = `
stdout:
"
Usage: update [issueId]

Description:

  Update a linear issue

Options:

  -h, --help                         - Show this help.                                                                  
  -a, --assignee      <assignee>     - Assign the issue to 'self' or someone (by username or name)                      
  --unassign                         - Clear the issue's assignee (cannot be combined with --assignee)                  
  --due-date          <dueDate>      - Due date of the issue                                                            
  --parent            <parent>       - Parent issue (if any) as a team_number code                                      
  -p, --priority      <priority>     - Priority of the issue (1-4, descending priority)                                 
  --estimate          <estimate>     - Points estimate of the issue                                                     
  -d, --description   <description>  - Description of the issue                                                         
  --description-file  <path>         - Read description from a file (preferred for markdown content)                    
  -l, --label         <label>        - Issue label associated with the issue. May be repeated.                          
  --team              <team>         - Team associated with the issue (if not your default team)                        
  --project           <project>      - Project to assign the issue to (UUID, slug ID, or name)                          
  -s, --state         <state>        - Workflow state for the issue (by name or type)                                   
  --milestone         <milestone>    - Project milestone (UUID, or name when --project is set or the issue already has  
                                       a project)                                                                       
  --cycle             <cycle>        - Cycle name, number, 'active'/'now', 'next', 'previous', or a relative offset     
                                       like +1 (use --cycle=-1 for negatives). Use --clear-cycle to remove the issue    
                                       from its cycle                                                                   
  --clear-cycle                      - Remove the issue from its cycle                                                  
  -t, --title         <title>        - Title of the issue                                                               

"
stderr:
""
`;

snapshot[`Issue Update Command - Happy Path 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Updated authentication bug fix
https://linear.app/test-team/issue/ENG-123/updated-authentication-bug-fix
"
stderr:
""
`;

snapshot[`Issue Update Command - Alphanumeric Team Key 1`] = `
stdout:
"Updating issue PLA4-16916

✓ Updated issue PLA4-16916: Test Issue
https://linear.app/test-team/issue/PLA4-16916/test-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - With Milestone 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Test Issue
https://linear.app/test-team/issue/ENG-123/test-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - Case Insensitive Label Matching 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Test Issue
https://linear.app/test-team/issue/ENG-123/test-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - Short Flag -p Is Priority 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Test Issue
https://linear.app/test-team/issue/ENG-123/test-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - With Cycle 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Test Issue
https://linear.app/test-team/issue/ENG-123/test-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - With Project UUID 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Test Issue
https://linear.app/test-team/issue/ENG-123/test-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - With Milestone UUID (no --project required) 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Test Issue
https://linear.app/test-team/issue/ENG-123/test-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - Unknown State Lists Valid States 1`] = `
stdout:
""
stderr:
"✗ Failed to update issue: Workflow state not found: 'Nope' for team ENG
  Valid states: \\"Todo\\" (unstarted), \\"In Progress\\" (started), \\"Done\\" (completed). Run \`linear team states ENG\` to list them.
"
`;

snapshot[`Issue Update Command - Unassign Clears Assignee 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Some issue
https://linear.app/test-team/issue/ENG-123/some-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - Unassign With Other Fields 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Renamed
https://linear.app/test-team/issue/ENG-123/renamed
"
stderr:
""
`;

snapshot[`Issue Update Command - Assignee Still Sends User Id 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Some issue
https://linear.app/test-team/issue/ENG-123/some-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - Assignee And Unassign Conflict 1`] = `
stdout:
""
stderr:
"✗ Failed to update issue: Cannot specify both --assignee and --unassign
  Use --assignee <user> to set an assignee, or --unassign on its own to clear it.
"
`;

snapshot[`Issue Update Command - Clear Cycle Sends Null 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Some issue
https://linear.app/test-team/issue/ENG-123/some-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - Cycle Next Resolves Via Flag 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Some issue
https://linear.app/test-team/issue/ENG-123/some-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - Cycle Relative Offset 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Some issue
https://linear.app/test-team/issue/ENG-123/some-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - Cycle Lookup Paginates 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Some issue
https://linear.app/test-team/issue/ENG-123/some-issue
"
stderr:
""
`;
